- Icônes manquantes - Sass avec les fixes

--- a/sources/sass/agenda/_sharebox.scss
+++ b/sources/sass/agenda/_sharebox.scss
@@ -89,6 +89,10 @@
   .button-group {
     margin-top: 50px;
     border-top: 1px solid #efefef;
+
+    .button-close {
+      background-image: none;
+    }
   }
 }
 
