--- a/sources/sass/base/_buttons.scss
+++ b/sources/sass/base/_buttons.scss
@@ -134,3 +134,23 @@
   background-image: url(../img/icons/expand_less-white-18dp/2x/baseline_expand_less_white_18dp.png);
   background-size: 16px auto;
 }
+
+.button-wmv {
+  background-image: url(../img/icons/movie-black-18dp/2x/baseline_movie_black_18dp.png);
+  background-size: 16px auto;
+}
+
+.button-mp4 {
+  background-image: url(../img/icons/movie-black-18dp/2x/baseline_movie_black_18dp.png);
+  background-size: 16px auto;
+}
+
+.button-mp3 {
+  background-image: url(../img/icons/audiotrack-black-18dp/2x/baseline_audiotrack_black_18dp.png);
+  background-size: 16px auto;
+}
+
+.button-close {
+  background-image: url(../img/icons/close-black-18dp/2x/baseline_close_black_18dp.png);
+  background-size: 16px auto;
+}
