Ajout du bouton stop rouge. Nettoyage des fichiers SVG.

--- a/sources/sass/agenda/_agenda-item--playing.scss
+++ b/sources/sass/agenda/_agenda-item--playing.scss
@@ -8,7 +8,7 @@
     display: none;
   }
 
-  & > .agenda-actions .button-stop {
+  & > .agenda-actions .button-stop-red {
     display: inline-block;
   }
 
