--- a/sources/sass/base/_buttons.scss
+++ b/sources/sass/base/_buttons.scss
@@ -100,6 +100,11 @@
   background-size: 16px auto;
 }
 
+.button-stop-red {
+  background-image: url(../img/icons/stop-red-18dp/2x/baseline_stop_red_18dp.png);
+  background-size: 16px auto;
+}
+
 .button-download {
   background-image: url(../img/icons/get_app-black-18dp/2x/baseline_get_app_black_18dp.png);
   background-size: 16px auto;
