--- a/sources/sass/agenda/_agenda-item__actions.scss
+++ b/sources/sass/agenda/_agenda-item__actions.scss
@@ -24,12 +24,6 @@
       margin: 0;
     }
 
-    .material-icons {
-      font-size: 14px;
-      line-height: 26px;
-      color: #333;
-    }
-
     &:hover {
       box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.5);
     }
@@ -39,13 +33,8 @@
     }
   }
 
-  .button-stop {
+  .button-stop-red {
     display: none;
-    border-color: $chd-lightred;
-
-    .material-icons {
-      color: $chd-lightred;
-    }
   }
 
   .button-expand,
